# reearth-papers

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
.github/workflows/: ci.yml  deploy.yml
container/: .dockerignore  Cargo.toml  Dockerfile
container/src/: main.rs  proxy.rs
mirror/: README.md  package.json  wrangler.toml
mirror/blackmarble/: README.md
mirror/blackmarble/scripts/: _lib.sh  build-cog.sh  build-manifest.sh  fetch.sh  run-all.sh
mirror/esa_worldcover_2021/: README.md
mirror/esa_worldcover_2021/scripts/: _lib.sh  build-manifest.sh  build-overview.sh  mirror.sh  run-all.sh
mirror/protomaps/: package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
mirror/protomaps/src/: env.d.ts  index.ts  pmtiles.ts  style.ts
mirror/src/: env.d.ts  workflow.ts
mirror/watercolor/: README.md
mirror/watercolor/builder/: build.go  go.mod  go.sum  list.go  main.go  pmtiles_writer.go
mirror/watercolor/scripts/: ec2-bootstrap.sh  launch-ec2.sh  put-r2-creds.sh  setup-aws-resources.sh  terminate-ec2.sh  upload-r2.sh
public/: index.html
scripts/: README.md  deploy.sh  thumbnails.mjs
src/: blackmarble.ts  cache.ts  catalog.ts  env.d.ts  esa_worldcover.ts  index.ts  pmtiles.ts  style.ts  tilejson.ts  watercolor.ts
worker/: package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
worker/scripts/: deploy.sh
